# GeniusClient

./: .gitignore  README.md  hatch.toml  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
src/genius_client/: __init__.py  client.py  models.py  oauth2.py
templates/: index.html
tests/genius_client/: test_client.py
